--- a/package.json
+++ b/package.json
@@ -9,68 +9,68 @@
     "down": "docker-compose -f ./server/docker-compose.yml down",
     "restart": "yarn down && yarn dev",
     "dev": "yarn up_bg && NODE_ENV=\"dev\" gulp",
+    "gulpdev": "NODE_ENV=\"dev\" gulp",
     "clean_dev": "NODE_ENV=\"dev\" gulp clean",
     "build": "NODE_ENV=\"release\" gulp build"
   },
   "author": "",
   "license": "MIT",
   "devDependencies": {
-    "async": "^2.6.0",
+    "@babel/core": "^7.7.2",
+    "@babel/polyfill": "^7.7.0",
+    "@babel/preset-env": "^7.7.1",
+    "async": "^3.1.0",
     "aws-sdk": "^2.156.0",
-    "babel-core": "^6.24.1",
-    "babel-loader": "^7.0.0",
-    "babel-polyfill": "^6.26.0",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-react": "^6.24.1",
-    "babel-preset-stage-3": "^6.24.1",
+    "babel-loader": "^8.0.6",
     "browser-sync": "^2.18.12",
     "connect-history-api-fallback": "^1.3.0",
     "const": "^1.0.0",
     "cpx": "^1.5.0",
-    "css-loader": "^0.28.11",
-    "del": "^2.2.2",
-    "exports-loader": "^0.6.4",
+    "css-loader": "^3.2.0",
+    "del": "^5.1.0",
+    "exports-loader": "^0.7.0",
     "fs": "^0.0.1-security",
     "gulp": "^3.9.1",
-    "gulp-autoprefixer": "^4.0.0",
-    "gulp-clean-css": "^3.6.0",
+    "gulp-autoprefixer": "^7.0.1",
+    "gulp-clean-css": "^4.2.0",
     "gulp-data": "^1.2.1",
-    "gulp-imagemin": "^3.3.0",
+    "gulp-imagemin": "^6.1.1",
     "gulp-plumber": "^1.1.0",
-    "gulp-pug": "^3.3.0",
+    "gulp-pug": "^4.0.1",
     "gulp-rename": "^1.3.0",
     "gulp-rsync": "^0.0.8",
     "gulp-sftp": "^0.1.5",
     "gulp-sourcemaps": "^2.6.0",
     "gulp-stylus": "^2.6.0",
-    "gulp-uglify-es": "^1.0.1",
-    "gulp-watch": "^4.3.11",
+    "gulp-uglify-es": "^2.0.0",
+    "gulp-watch": "^5.0.1",
     "gulp.spritesmith": "^6.5.1",
     "html-loader": "^0.5.5",
-    "imagemin-mozjpeg": "^6.0.0",
-    "imagemin-pngquant": "^5.0.1",
-    "imports-loader": "^0.7.1",
-    "merge-stream": "^1.0.1",
+    "imagemin-mozjpeg": "^8.0.0",
+    "imagemin-pngquant": "^8.0.0",
+    "imports-loader": "^0.8.0",
+    "merge-stream": "^2.0.0",
     "path": "^0.12.7",
     "pug": "^2.0.3",
     "pug-loader": "^2.4.0",
     "pug-plain-loader": "^1.0.0",
-    "run-sequence": "^1.2.2",
+    "run-sequence": "^2.2.1",
     "s3": "^4.4.0",
     "shader-loader": "^1.3.0",
     "stats-js": "^1.0.0-alpha1",
-    "style-loader": "^0.20.3",
+    "style-loader": "^1.0.0",
     "stylus": "^0.54.5",
     "stylus-loader": "^3.0.2",
     "vue-loader": "^15.2.6",
     "vue-style-loader": "^4.1.1",
     "vue-template-compiler": "^2.5.16",
     "webpack": "^4.2.0",
-    "webpack-stream": "^3.2.0"
+    "webpack-stream": "^5.2.1"
   },
   "dependencies": {
-    "axios": "^0.18.0",
-    "gsap": "^1.19.1",
+    "axios": "^0.19.0",
+    "core-js": "3",
+    "gsap": "^2.1.3",
     "vue": "^2.5.16",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1"
